--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10832,3 +10832,13 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.navbar-collapse {
+  justify-content: flex-end;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    left: -75px;
+    top: 40px;
+  }
+}
